cmake_minimum_required(VERSION 3.28)
set(CMAKE_C_STANDARD 23)
set(CMAKE_C_STANDARD_REQUIRED ON)
project(String)
add_compile_options(-ggdb -O0 -fsanitize=address -Wall -Wextra -Werror)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
add_library(${PROJECT_NAME} src/c_string.c)
add_executable(${PROJECT_NAME}test src/main.c)
target_link_libraries(${PROJECT_NAME}test PRIVATE ${PROJECT_NAME})
